[package]
name = "polyv-ppt-downloader"
version = "0.1.0"
authors = ["zacksleo <zacksleo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
reqwest = "0.11.4"
tokio = { version = "1", features = ["full"] }
serde = {version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
clap = "3.0.0-beta.2"